--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>About</title>
   <link href="aboutme.css" rel="stylesheet" type="text/css" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
