--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Courses</title>
   <link href="courses.css" rel="stylesheet" type="text/css" />
 
   
