--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>SWEPT</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
